paid/force-app/main/default/objects/Paid_Debit_Note_Line__c/Paid_Debit_Note_Line__c.object-meta.xml
<CustomObject>
    <label>Paid Debit Note Line</label>
    <nameField>
        <label>Paid Debit Note Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Paid Debit Note Line</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>