paid/force-app/main/default/objects/Paid_Debit_Note_Line__c/fields/Paid_Debit_Note_Line_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Debit_Note_Line_Date__c</fullName>
    <label>Paid Debit Note Line Date</label>
    <type>Date</type>
</CustomField>