paid/force-app/main/default/objects/Paid_Debit_Note_Line__c/fields/Paid_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_End_Date__c</fullName>
    <label>Paid End Date</label>
    <type>Date</type>
</CustomField>