paid/force-app/main/default/objects/Paid_Debit_Note_Line__c/fields/Paid_LegalEntityReference__c.field-meta.xml
<CustomField>
    <fullName>Paid_LegalEntityReference__c</fullName>
    <externalId>true</externalId>
    <label>Paid LegalEntityReference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>