paid/force-app/main/default/objects/Paid_Debit_Note_Line__c/fields/Paid_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Paid_Line_Number__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Paid Line Number</label>
    <type>AutoNumber</type>
</CustomField>