paid/force-app/main/default/objects/Paid_Debit_Note_Line__c/fields/Paid_Revenue_Agreement_Matching_ID__c.field-meta.xml
<CustomField>
    <fullName>Paid_Revenue_Agreement_Matching_ID__c</fullName>
    <label>Paid Revenue Agreement Matching ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>