paid/force-app/main/default/objects/Paid_Debit_Note_Line__c/fields/Paid_Revenue_Liability_Amount__c.field-meta.xml
<CustomField>
    <fullName>Paid_Revenue_Liability_Amount__c</fullName>
    <label>Paid Revenue Liability Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>