paid/force-app/main/default/objects/Paid_Debit_Note_Line__c/fields/Paid_Standalone_Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>Paid_Standalone_Selling_Price__c</fullName>
    <label>Paid Standalone Selling Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>