paid/force-app/main/default/objects/Paid_Debit_Note_Line__c/fields/Paid_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Paid_Subtotal__c</fullName>
    <label>Paid Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>