paid/force-app/main/default/objects/Paid_Debit_Note_Line__c/fields/Paid_Tax_Country__c.field-meta.xml
<CustomField>
    <fullName>Paid_Tax_Country__c</fullName>
    <label>Paid Tax Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>