paid/force-app/main/default/objects/Paid_Debit_Note_Line__c/fields/Paid_Tax_Percentage_Applied__c.field-meta.xml
<CustomField>
    <fullName>Paid_Tax_Percentage_Applied__c</fullName>
    <label>Paid Tax Percentage Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>