paid/force-app/main/default/objects/Paid_Debit_Note_Line__c/fields/Paid_Tax_Status__c.field-meta.xml
<CustomField>
    <fullName>Paid_Tax_Status__c</fullName>
    <label>Paid Tax Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>