paid/force-app/main/default/objects/Paid_Debit_Note_Line__c/fields/Paid_Total_Amount_With_Tax__c.field-meta.xml
<CustomField>
    <fullName>Paid_Total_Amount_With_Tax__c</fullName>
    <label>Paid Total Amount (With Tax)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>